resolved a bunch of sonar bugs